--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,8 +33,12 @@
     </button>
   </mat-toolbar>
 
+    <router-outlet></router-outlet>
 
-  <router-outlet></router-outlet>
+  <div class="spinner-container" *appShellRender>
 
+    <mat-spinner></mat-spinner>
+
+  </div>
 
 </mat-sidenav-container>
